--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	  <exclusions>
+		<exclusion>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+		</exclusion>
+	  </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
